stress_test_output_6.txt
============================= test session starts =============================
platform win32 -- Python 3.11.9, pytest-9.0.1, pluggy-1.6.0
rootdir: E:\omniai-studio-universe\hub-backend
plugins: anyio-4.11.0, asyncio-1.3.0
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collected 0 items / 1 error

=================================== ERRORS ====================================
__________ ERROR collecting app/tests/load/test_autodirector_load.py __________
C:\Users\DELL\AppData\Roaming\Python\Python311\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\DELL\AppData\Roaming\Python\Python311\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Program Files\Python311\Lib\importlib\__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
C:\Users\DELL\AppData\Roaming\Python\Python311\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\DELL\AppData\Roaming\Python\Python311\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Program Files\Python311\Lib\ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "E:\omniai-studio-universe\hub-backend\app\tests\load\test_autodirector_load.py", line 75
E       "duration": 1
E   IndentationError: unexpected indent
=========================== short test summary info ===========================
ERROR app/tests/load/test_autodirector_load.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 0.38s ===============================
============================= test session starts =============================
platform win32 -- Python 3.11.9, pytest-9.0.1, pluggy-1.6.0
rootdir: E:\omniai-studio-universe\hub-backend
plugins: anyio-4.11.0, asyncio-1.3.0
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collected 1 item

app\tests\load\test_ffmpeg_stress.py .                                   [100%]

============================== 1 passed in 0.44s ==============================
============================= test session starts =============================
platform win32 -- Python 3.11.9, pytest-9.0.1, pluggy-1.6.0
rootdir: E:\omniai-studio-universe\hub-backend
plugins: anyio-4.11.0, asyncio-1.3.0
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collected 1 item

app\tests\load\test_r2_upload_stress.py .                                [100%]

============================== warnings summary ===============================
app\config.py:3
  E:\omniai-studio-universe\hub-backend\app\config.py:3: PydanticDeprecatedSince20: Support for class-based `config` is deprecated, use ConfigDict instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.12/migration/
    class Settings(BaseSettings):

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
======================== 1 passed, 1 warning in 0.44s =========================
============================= test session starts =============================
platform win32 -- Python 3.11.9, pytest-9.0.1, pluggy-1.6.0
rootdir: E:\omniai-studio-universe\hub-backend
plugins: anyio-4.11.0, asyncio-1.3.0
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collected 0 items / 1 error

=================================== ERRORS ====================================
___________ ERROR collecting app/tests/load/test_timeline_batch.py ____________
C:\Users\DELL\AppData\Roaming\Python\Python311\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\DELL\AppData\Roaming\Python\Python311\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Program Files\Python311\Lib\importlib\__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
C:\Users\DELL\AppData\Roaming\Python\Python311\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\DELL\AppData\Roaming\Python\Python311\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Program Files\Python311\Lib\ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "E:\omniai-studio-universe\hub-backend\app\tests\load\test_timeline_batch.py", line 21
E       except Exception as e:
E                             ^
E   IndentationError: unindent does not match any outer indentation level
=========================== short test summary info ===========================
ERROR app/tests/load/test_timeline_batch.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 0.26s ===============================
============================= test session starts =============================
platform win32 -- Python 3.11.9, pytest-9.0.1, pluggy-1.6.0
rootdir: E:\omniai-studio-universe\hub-backend
plugins: anyio-4.11.0, asyncio-1.3.0
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collected 1 item

app\tests\load\test_ai_worker_stress.py .                                [100%]

============================= 1 passed in 48.13s ==============================
--- STARTING PHASE 9.4 LOAD & STRESS TESTS ---

[1/5] Running Auto-Director Load Test...
Time: 1.28s

[2/5] Running FFmpeg Stress Test...
Time: 1.37s

[3/5] Running R2 Upload Stress Test...
Time: 1.33s

[4/5] Running Timeline Batch Test...
Time: 0.93s

[5/5] Running AI Worker Stress Test...
Time: 48.81s

--- PHASE 9.4 LOAD & STRESS TEST COMPLETE ---

Summary:
{
  "results": {
    "autodirector": "FAIL",
    "ffmpeg": "PASS",
    "r2_upload": "PASS",
    "timeline": "FAIL",
    "ai_worker": "PASS"
  },
  "resources": {
    "cpu_max": 97.0,
    "cpu_avg": 51.48796296296297,
    "memory_max": 84.8,
    "memory_avg": 84.16481481481486,
    "disk_max": 5.5
  }
}
